apps/base/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
