apps/base/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  type: LoadBalancer
  ports:
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP

  - name: dashboard
    port: 3000
    targetPort: dashboard
    protocol: TCP
  - name: dns-over-tls
    port: 853
    targetPort: dns-over-tls
    protocol: TCP
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-internal
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  type: ClusterIP
  ports:
  - name: http-dashboard
    port: 3000
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
