apps/base/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  ingressClassName: traefik
  rules:
    - host: adguard.localho.st
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-home-internal
              port:
                name: http-dashboard
