apps/base/adguard-home/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-route
  namespace: adguard-home
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - adguard.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-home-internal
          port: 3000
